@@ -45,8 +45,7 @@ class ImportPlugin(IP):
 	email		= "Jessica.K.P@women-at-work.org"
 	version		= "0.3"
 	file_filters	= '*.[cC][sS][vV]'
-	mime_types	= ('text/comma-separated-values', 'text/csv', 'application/csv',
-			'application/excel', 'application/vnd.ms-excel', 'application/vnd.msexcel')
+	mime_types	= ('text/comma-separated-values', 'text/csv', 'application/csv')
 
 	def initialize(self):
 		if not IP.initialize(self):
@@ -138,18 +137,11 @@ class ImportPlugin(IP):
 	
 	def set_griffith_fields(self):
 		# 2nd list
-		sorted_list = ( "number","title", "o_title", "director", "year", "country", 
-				"cast", "studio", "plot", "runtime", "genre", "classification",
-				"site", "o_site", "trailer", "image", "seen", "loaned", "notes", 
-				"rating", "movie_id", "collection_id", "volumne_id", "medium_id", 
-				"vcodec_id", "color", "cond", "layers", "region", "media_num" )
-		# sort the list and add field and translated field-name
-		for sorted in sorted_list:
-			for name in self.fields_to_import:
-				if sorted == name:
-					iterator = self.ls_griffith.append()
-					self.ls_griffith.set_value(iterator, 0, name)
-					self.ls_griffith.set_value(iterator, 1, self.fields[name])
+		for name in self.fields_to_import:
+			if sorted == name:
+				iterator = self.ls_griffith.append()
+				self.ls_griffith.set_value(iterator, 0, name)
+				self.ls_griffith.set_value(iterator, 1, self.fields[name])
 		
 		
 	def create_import_table(self):
